# funnel_analysis_agent

./: .gitignore  LICENSE.md  README.md  pyproject.toml
funnel_analysis_agent/: demo_notebook.ipynb  finetuned_prompt.py  main.py  main_notebook.ipynb
