[tool.poetry]
name = "funnel-analysis-agent"
version = "0.1.0"
description = ""
authors = ["Rishikesh Rachchh <rishikeshrachchh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-ollama = "^0.2.1"
langchain-community = "^0.3.11"
sqlalchemy = "^2.0.36"
pinotdb = "^5.6.0"
langgraph = "^0.2.59"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
